[project]
name = "deliverytimepredictor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.51.0",
    "wandb>=0.28.0",
    "xgboost>=3.2.0",
]
